[package]
name = "rusty_brot_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
colorgrad = "0.6.2"
image = "0.24.6"
indicatif = "0.17.3"
num-complex = "0.4.3"
rayon = "1.7.0"

[profile.release]
opt-level = 3
